force-app/main/default/objects/Correios__c/Correios__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Settings for all Correios API</description>
    <label>Correios</label>
</CustomObject>