force-app/main/default/objects/Correios__c/fields/CartaoPostagem__c.field-meta.xml
<CustomField>
    <fullName>CartaoPostagem__c</fullName>
    <label>Cartão Postagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>