force-app/main/default/objects/Correios__c/fields/CodigoAdministrativo__c.field-meta.xml
<CustomField>
    <fullName>CodigoAdministrativo__c</fullName>
    <label>Código Administrativo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>