force-app/main/default/objects/Correios__c/fields/CodigoPostagemReversaSedex__c.field-meta.xml
<CustomField>
    <fullName>CodigoPostagemReversaSedex__c</fullName>
    <description>Código aplicado quando o destinatário e o remetente forem SP</description>
    <label>Código Postagem Reversa Sedex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>