force-app/main/default/objects/Correios__c/fields/CodigoServicoPostagemReversa__c.field-meta.xml
<CustomField>
    <fullName>CodigoServicoPostagemReversa__c</fullName>
    <label>Código Serviço Postagem Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>