force-app/main/default/objects/Correios__c/fields/EndpointLogisticaReversa__c.field-meta.xml
<CustomField>
    <fullName>EndpointLogisticaReversa__c</fullName>
    <label>Endpoint Logística Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>