force-app/main/default/objects/Correios__c/fields/EndpointSRO__c.field-meta.xml
<CustomField>
    <fullName>EndpointSRO__c</fullName>
    <label>Endpoint SRO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>