force-app/main/default/objects/Correios__c/fields/SenhaLogisticaReversa__c.field-meta.xml
<CustomField>
    <fullName>SenhaLogisticaReversa__c</fullName>
    <label>Senha Logística Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>