force-app/main/default/objects/Correios__c/fields/SenhaSRO__c.field-meta.xml
<CustomField>
    <fullName>SenhaSRO__c</fullName>
    <label>Senha SRO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>