force-app/main/default/objects/Correios__c/fields/UsuarioLogisticaReversa__c.field-meta.xml
<CustomField>
    <fullName>UsuarioLogisticaReversa__c</fullName>
    <label>Usuário Logística Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>