force-app/main/default/objects/Correios__c/fields/UsuarioSRO__c.field-meta.xml
<CustomField>
    <fullName>UsuarioSRO__c</fullName>
    <label>Usuário SRO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>